# mathlib

./: pyproject.toml
filter_collections/: __init__.py  filter.py  matchers.py
tests/: test_filter_collections.py
